<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary80"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_alert"
        android:layout_width="235dp"
        android:layout_height="71dp"
        android:text="@string/open_dialog"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toTopOf="@+id/button_alert_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="@color/design_default_color_primary_dark"
        app:strokeColor="@color/design_default_color_error"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_alert_two"
        android:layout_width="235dp"
        android:layout_height="71dp"
        android:text="@string/open_dialog_three_buttons"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/button_alert_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alert"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="@color/design_default_color_secondary"
        app:strokeColor="@color/design_default_color_primary_dark"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_alert_list"
        android:layout_width="235dp"
        android:layout_height="71dp"
        android:text="@string/open_dialog_list"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="?android:attr/colorFocusedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/button_alert_list_flags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alert_two"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="@color/design_default_color_error"
        app:strokeColor="@color/material_dynamic_tertiary20"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_alert_list_flags"
        android:layout_width="235dp"
        android:layout_height="71dp"
        android:text="@string/open_dialog_list_flags"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="?attr/colorError"
        app:layout_constraintBottom_toTopOf="@+id/button_alert_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alert_list"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="@color/design_default_color_secondary"
        app:strokeColor="@android:color/holo_green_dark"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_alert_rating"
        android:layout_width="235dp"
        android:layout_height="71dp"
        android:text="@string/open_dialog_rating"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="?attr/colorOnPrimaryContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alert_list_flags"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="@android:color/holo_purple"
        app:strokeColor="@android:color/holo_orange_dark"
        app:strokeWidth="3dp" />
</androidx.constraintlayout.widget.ConstraintLayout>